@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-21T08:20:30Z",
-  "count_outdated" : 181,
-  "uniques_outdated" : 116,
+  "timestamp" : "2022-04-23T16:20:50Z",
+  "count_outdated" : 182,
+  "uniques_outdated" : 117,
   "count" : 211,
   "uniques" : 137,
   "clones" : [
-    {
-      "timestamp": "2022-04-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-04-11T00:00:00Z",
       "count": 1,
