@@ -1,12 +1,7 @@
 {
-  "count": 30,
-  "uniques": 12,
+  "count": 29,
+  "uniques": 11,
   "clones": [
-    {
-      "timestamp": "2022-04-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-04-11T00:00:00Z",
       "count": 1,
